fix: issues on safari mobile

--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,6 @@
             margin: 0;
             padding: 0;
             list-style-type: none;
-            transition: .3s ease-in-out all;
-
 
             .task {
                 display: flex;
@@ -93,6 +91,7 @@
                 border: none;
                 padding: 0;
                 opacity: 0;
+                overflow: hidden;
                 transition: .5s ease-in-out opacity;
             }
 
@@ -144,31 +143,65 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
     .mind {
         .wrapper {
-            padding: 0 20px;
+            padding: 120px 20px 100px;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             height: 100%;
+            max-width: 100%;
         }
         
 
         header {
-            padding: 40px 20px 60px;
+            position: fixed;
+            background:var(--color-light);
+            width: 100%;
+            padding: 40px 20px;
+            top: 0;
+            left: 0;
+            z-index: 1;
             h1 {
                 font-size: 34px;
             }
         }   
 
+        &.no-tasks header {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
         main {
-            padding: 0 20px;
-            max-height: 60vh;
+            padding: 0 0px;
+            max-height: 65vh;
+
+            .tasks .task .task-description:hover span {
+                --s: 0;
+            }
+            .tasks .task.task.completed .task-description:hover span {
+                --s: 100%;
+            }
         }
 
         footer {
             margin-top: auto;
+            position: fixed;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            bottom: 0px;
+            width: 100%;
+            padding: 20px 20px 20px;
+            background:var(--color-light);
+            
+            .tasks-form {
+                padding: 10px;
+            }
+            
         }
     }
 }
