--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,9 @@ html, body {
   padding: 0;
 }
 
+body {
+  background: var(--color-light);
+}
 
 p {
   margin: 0;
